--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,38 @@
-# Created by https://www.toptal.com/developers/gitignore/api/swift,xcode,cocoapods,swiftpackagemanager
-# Edit at https://www.toptal.com/developers/gitignore?templates=swift,xcode,cocoapods,swiftpackagemanager
+# Created by https://www.toptal.com/developers/gitignore/api/macos,swift,swiftpackagemanager,xcode
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,swift,swiftpackagemanager,xcode
 
-### CocoaPods ###
-## CocoaPods GitIgnore Template
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
-#           - Also handy if you have a large number of dependant pods
-#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
-Pods/
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### Swift ###
 # Xcode
@@ -112,6 +137,4 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.toptal.com/developers/gitignore/api/swift,xcode,cocoapods,swiftpackagemanager
-.DS_Store
-Package.resolved
+# End of https://www.toptal.com/developers/gitignore/api/macos,swift,swiftpackagemanager,xcode
